# pgc

./: .dockerignore  .gitignore  CHANGELOG  CODEOWNERS  DOCKER.md  DOCKER_BUILD_FIXED.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  GITHUB_ACTIONS_WORKFLOW.md  LICENSE  README.md  docker-build.sh  docker-compose.yml  test-build.sh
.github/: DOCKER_SETUP.md
.github/workflows/: release.yml  rust.yml
app/: Cargo.toml
app/src/: config.rs  main.rs
app/src/comparer/: core.rs  core_tests.rs  mod.rs  production.rs  production_tests.rs  scanner.rs  scanner_tests.rs
app/src/config/: core.rs  core_tests.rs  dump_config.rs  dump_config_tests.rs  grants_mode.rs  grants_mode_tests.rs  mod.rs
app/src/dump/: acl.rs  acl_tests.rs  cast.rs  cast_tests.rs  collation.rs  collation_tests.rs  column_dependent.rs  column_dependent_tests.rs  core.rs  core_tests.rs  default_privilege.rs  default_privilege_tests.rs  event_trigger.rs  event_trigger_tests.rs  extension.rs  extension_tests.rs  fdw.rs  fdw_tests.rs  foreign_table.rs  foreign_table_tests.rs  mod.rs  operator.rs  operator_tests.rs  pg_enum.rs  pg_enum_tests.rs  pg_type.rs  pg_type_tests.rs  publication.rs  publication_tests.rs  routine.rs  routine_tests.rs  rule.rs  rule_tests.rs  schema.rs  schema_tests.rs  sequence.rs  sequence_tests.rs  statistic.rs  statistic_tests.rs  table.rs  (+15 more)
app/src/utils/: mod.rs  string_extensions.rs  string_extensions_tests.rs
data/: dump.io  dump.out  output.sql  pgc.conf
data/test/: README.md  clear_expected.sql  clear_test.sql  schema_a.sql  (+1 more)
packaging/: nfpm.yaml
pgc/: Cargo.toml
(+20 files in other folders)
