[package]
name = "pgc"
version = "1.0.1"
edition = "2024"
license = "MIT"

[[bin]]
name = "pgc"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.38", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"]}
serde = "1.0.219"
serde_json = "1.0.140"
zip = "4.0.0"
md5 = "0.7.0"
sha2 = "0.10.9"
chrono = { version = "0.4", features = ["clock"] }
